@@ -33,6 +33,7 @@ typedef long rgxg_options_t;
 #define RGXG_LEADINGZERO                (1L<<3)
 #define RGXG_VARLEADINGZERO             (1L<<4)
 #define RGXG_NOZEROCOMPRESSION          (1L<<5)
+#define RGXG_NOMIXEDNOTATION            (1L<<6)
 
 #define RGXG_ERROR_RANGE                (-1)
 #define RGXG_ERROR_BASE                 (-2)
