@@ -58,7 +58,7 @@ int rgxg_net_cidr_ipv4 (const ipv4_t *address, int prefix, char *regex,
             last.octet[i] = (address->octet[i])|~mask;
         }
         for (i = 0; i < 4; ++i) {
-            while (i < 2 && first.octet[i] == first.octet[i+1]
+            while (i > 0 && i < 3 && first.octet[i] == first.octet[i+1]
                     && last.octet[i] == last.octet[i+1]
                     && (first.octet[i] != last.octet[i] || first.octet[i] > 9) /* 192\.192\. => (192\.){2} but 0\.0\. => 0\.0\. */
                   ) {
@@ -68,12 +68,12 @@ int rgxg_net_cidr_ipv4 (const ipv4_t *address, int prefix, char *regex,
             if (x > 1) {
                 EASY_CHAR('(');
             }
-            n += rgxg_number_range(first.octet[i], last.octet[i],
-                    10, 0, (regex ? regex+n : NULL), 0);
-            if (i < 3) {
+            if (i > 0) {
                 EASY_CHAR('\\');
                 EASY_CHAR('.');
             }
+            n += rgxg_number_range(first.octet[i], last.octet[i],
+                    10, 0, (regex ? regex+n : NULL), 0);
             if (x > 1) {
                 EASY_CHAR(')');
                 EASY_CHAR('{');
@@ -91,10 +91,11 @@ int rgxg_net_cidr_ipv6 (const ipv6_t *address, int prefix, char *regex,
     if (prefix < 0 || prefix > 128) {
         return RGXG_ERROR_PREFIX;
     } else {
-        int i, n, max, bits, zeros, open_parentheses;
+        int i, n, max, bits, zeros, open_parentheses, mixed_parenthesis;
         n = 0;
         max = 1;
         ipv6_t first, last;
+        ipv4_t mixed;
         uint16_t mask;
         for (i = 0; i < 8; ++i) {
             bits = i*16;
@@ -103,28 +104,45 @@ int rgxg_net_cidr_ipv6 (const ipv6_t *address, int prefix, char *regex,
                             ) : 0) - 1);
             first.hextet[i] = (address->hextet[i])&mask;
             last.hextet[i] = (address->hextet[i])|~mask;
+            if (i >= 6  && !(RGXG_NOMIXEDNOTATION&options)) {
+                int offset = (i%6)*2;
+                mixed.octet[offset] = address->hextet[i] >> 8;
+                mixed.octet[offset+1] = (address->hextet[i] << 8) >> 8;
+            }
         }
 
         open_parentheses = 0;
-        for (int j = 0; j < 8; ++j) {
-            i = j;
-            if (!(RGXG_NOZEROCOMPRESSION&options) && first.hextet[j] == 0) {
-                if (j > 0 || !(RGXG_NOOUTERPARENS&options)) {
+        mixed_parenthesis = -1;
+        for (int j = 0; j < 14; ++j) {
+            i = j%8;
+            if (!(RGXG_NOZEROCOMPRESSION&options) && first.hextet[j%8] == 0) {
+                if (mixed_parenthesis < 0 && !(RGXG_NOMIXEDNOTATION&options)) {
+                    mixed_parenthesis = j;
+                    if (j > 0 || !(RGXG_NOOUTERPARENS&options)) {
+                        EASY_CHAR('('); }
+                }
+                if (j > 0 || (!(RGXG_NOMIXEDNOTATION&options) || !(RGXG_NOOUTERPARENS&options)) ) {
                     open_parentheses++;
                     EASY_CHAR('(');
                 }
-                if (j == 0) { EASY_CHAR(':'); } /* :: at the beginning */
-                EASY_CHAR(':');
+                if (j < 13) { EASY_CHAR(':'); }
+                if (j < 8) { EASY_CHAR(':'); }
+                if (j != 7 && j != 13) { EASY_CHAR('|'); }
+                if (j%8 < 7) { EASY_CHAR(':'); }
                 i++; /* omit current zero hextet */
                 zeros = 1;
             } else {
+                if (mixed_parenthesis < 0 && !(RGXG_NOMIXEDNOTATION&options) && j == 6) {
+                    mixed_parenthesis = 6;
+                    EASY_CHAR('(');
+                }
                 zeros = 0;
             }
             for (int k = !zeros ; k < 2; ++k) {
-                for (; i < ((k && !zeros) ? j+1 : 8) ; ++i) {
+                for (; i < ((k && !zeros) ? (j%8)+1 : (j>7 ? 6 : 8)) ; ++i) {
                     if (zeros || (RGXG_NOZEROCOMPRESSION&options)) {
-                        while (i < 6 && first.hextet[i] == first.hextet[i+1]
-                                && last.hextet[i] == last.hextet[i+1]) {
+                        while (i > 0 && i < (j >= 8 || (mixed_parenthesis < 0 && !(RGXG_NOMIXEDNOTATION&options)) ? 5 : 7)
+                                && first.hextet[i] == first.hextet[i+1] && last.hextet[i] == last.hextet[i+1]) {
                             if (RGXG_NOZEROCOMPRESSION&options) { j++; }
                             i++;
                             max++;
@@ -133,42 +151,60 @@ int rgxg_net_cidr_ipv6 (const ipv6_t *address, int prefix, char *regex,
                     if (zeros && first.hextet[i] != 0) {
                         zeros = 0;
                     }
-                    if (zeros || max > 1) {
+                    if (max > 1) {
                         EASY_CHAR('(');
+                    }
+                    if (i > 0) {
+                        EASY_CHAR(':');
                     }
                     n+= rgxg_number_range(first.hextet[i], last.hextet[i],
                             16, 4, (regex ? regex+n : NULL),
                             (options&(RGXG_NOUPPERCASE|RGXG_NOLOWERCASE))|RGXG_VARLEADINGZERO);
-                    if (i < 7) {
-                        EASY_CHAR(':');
-                    }
-                    if (zeros || max > 1) {
+                    if (max > 1) {
                         EASY_CHAR(')');
-                        if (zeros && max == 1) {
-                            EASY_CHAR('?');
-                        } else {
-                            EASY_CHAR('{');
-                            if (zeros) {
-                                EASY_CHAR('0');
-                                EASY_CHAR(',');
-                            }
-                            n += rgxg_number(max, 10, (regex ? regex+n : NULL), 0);
-                            EASY_CHAR('}');
-                            max = 1;
+                        EASY_CHAR('{');
+                        if (zeros) {
+                            EASY_CHAR('1');
+                            EASY_CHAR(',');
                         }
+                        n += rgxg_number(max, 10, (regex ? regex+n : NULL), 0);
+                        EASY_CHAR('}');
+                        max = 1;
                     }
                 }
                 if (!k) {
                     EASY_CHAR('|');
-                    i = j;
+                    i = j%8;
                     zeros = 0;
                 }
             }
-        }
-        for (i = 0; i < open_parentheses; ++i) {
-            EASY_CHAR(')');
-        }
+            if (j == 7 || j == 13) {
+                for (i = 0; i < open_parentheses; ++i) {
+                    EASY_CHAR(')');
+                }
+                if (mixed_parenthesis >= 0) { /* mixed notation */
+                    if (j == 7) {
+                        EASY_CHAR('|');
+                        open_parentheses = 0;
+                        if (mixed_parenthesis == 6) {
+                            EASY_CHAR(':');
+                            n += rgxg_net_cidr_ipv4(&mixed, (prefix > 96 ? prefix-96 : 0), (regex ? regex+n : NULL), 0);
+                            EASY_CHAR(')');
+                            j = 14; /* done */
+                        } else {
+                            j = mixed_parenthesis+7; /* +1 in for loop */
+                        }
+                    } else { /* j == 13 */
+                        EASY_CHAR(':');
+                        n += rgxg_net_cidr_ipv4(&mixed, (prefix > 96 ? prefix-96 : 0), (regex ? regex+n : NULL), 0);
+                        if (mixed_parenthesis > 0 || !(RGXG_NOOUTERPARENS&options)) { EASY_CHAR(')'); }
+                    }
+                } else { /* done */
+                    j = 14;
+                }
 
+            }
+        }
         return n;
     }
 }
@@ -179,7 +215,7 @@ int rgxg_net_cidr_ipv6 (const ipv6_t *address, int prefix, char *regex,
 
 int rgxg_net_cidr_string (const char *cidr, char** endptr, char *regex,
         rgxg_options_t options) {
-    int n, i;
+    int n, i, j;
     char *ptr;
     long value;
     long prefix;
@@ -195,6 +231,14 @@ int rgxg_net_cidr_string (const char *cidr, char** endptr, char *regex,
                 EASY_RETURN(RGXG_ERROR_SYNTAX, cidr+1);
             }
             value = strtol(cidr, &ptr, 16);
+            if (*ptr == '.' ) { /* IPv4 part found */
+                if ((start_of_zero_section >= 0 && i < 6) ||
+                        (start_of_zero_section < 0 && i == 6)) {
+                    break;
+                } else {
+                    EASY_RETURN(RGXG_ERROR_SYNTAX, cidr);
+                }
+            }
             if (value > 65535 || value < 0) {
                 EASY_RETURN(value < 0 ? RGXG_ERROR_NEGARG : RGXG_ERROR_ARG2BIG, cidr)
             } else if (value == 0 && cidr == ptr) {
@@ -209,7 +253,7 @@ int rgxg_net_cidr_string (const char *cidr, char** endptr, char *regex,
                 } else if (*ptr != '/') {
                     EASY_RETURN(RGXG_ERROR_SYNTAX, ptr)
                 }
-            } else if (*(ptr+1) != '/' && (start_of_zero_section < 0 || i < 6 )) {
+            } else if (*(ptr+1) != '/' && (start_of_zero_section < 0 || i < 7 )) {
                 address.hextet[i++] = value;
             } else {
                 EASY_RETURN(RGXG_ERROR_SYNTAX, ptr)
@@ -217,6 +261,27 @@ int rgxg_net_cidr_string (const char *cidr, char** endptr, char *regex,
 
             cidr = ptr+1;
         } while (*ptr == ':' && i < 8);
+        if (*ptr == '.') { /* IPv4 part */
+            j = 0;
+            do {
+                value = strtol(cidr, &ptr, 10);
+                if (value > 255 || value < 0) {
+                    EASY_RETURN(value < 0 ? RGXG_ERROR_NEGARG : RGXG_ERROR_ARG2BIG, cidr)
+                } else if (value == 0 && cidr == ptr) {
+                    EASY_RETURN(RGXG_ERROR_SYNTAX, ptr)
+                } else {
+                    if ((j++)%2 == 0) {
+                        address.hextet[i] = value*256;
+                    } else {
+                        address.hextet[i++] += value;
+                    }
+                }
+                cidr = ptr+1;
+            } while (*ptr == '.' && j < 4);
+            if (j < 4) {
+                EASY_RETURN(RGXG_ERROR_SYNTAX, ptr)
+            }
+        }
         if (start_of_zero_section >= 0) {
             /* move hextets behind the zero section at the end and fill the gap with zeros */
             int length = 8 - i;
