@@ -1,3 +1,12 @@
+2013-04-04	Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* include/rgxg/types.h, lib/net.c, src/cidr.c, man/rgxg.1:
+	  - added support for IPv6 mixed notation
+	  - added 'RGXG_NOMIXEDNOTATION' option
+	  - added '-s' option to 'cidr' command
+	  - fixed several bugs with IPv6 parsing
+	  - fixed several bugs with IPv6 regex generation
+	  - optimized IPv4 and IPv6 regex generation
+
 2013-03-30	Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* include/rgxg/net.h, lib/net.c, src/cidr.c:
 	  - added missing 'const' keyword to 'address' parameter
